<resources>
    <string name="app_name">GuideMe</string>
    <string name="app_version">1.0.0 alpha</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="guiar_Button">Guiar</string>
    <string name="abm_button">Lugares</string>
    <string name="favoritos_Button">Favoritos</string>
    <string name="salir_Button">Salir</string>
    <string name="information_Button">Información</string>
    <string name="a_Pie">A pie</string>
    <string name="colectivo">Colectivo</string>
    <string name="lugares">Lugares</string>
    <string name="nombre_lugar">Nombre del Lugar:</string>
    <string name="nombre_contact">Nombre del Contacto :</string>
    <string name="nombre_apellido">Nombre y Apellido :</string>
    <string name="nombre_apellido_hint">Nombre y Apellido </string>
    <string name="cat_lugar">Tipo de Lugar:</string>
    <string name="tel_lugar">Teléfono del Lugar:</string>
    <string name="tel_contact">Teléfono del Contacto</string>
    <string name="lineas">Lineas</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar">Iniciar Guiado</string>
    <string name="cargar">Cargar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="visitar">Visitar</string>
    <string name="llamar">Llamar</string>
    <string name="llamar_a">Llamar a </string>
    <string name="llamando_a">Llamando a </string>
    <string name="ayuda">Ayuda</string>
    <string name="lugar_salud_categoria">Salud</string>
    <string name="lugar_tramites_categoria">Tramites</string>
    <string name="lugar_bares_categoria">Bares</string>
    <string name="lugar_otros_categoria">Otros</string>
    <string name="tipo_lugar">Tipo de Lugar (Ejemplo: Salud)</string>

    <string name="modoDeUso">Al iniciar se tiene un menú de opciones, en donde usted debe elegir entre \"Guiar\", \"Lugares\", \"Información\", \"Salir\", si elige Lugares, usted podra cargar, editar o eliminar un lugar que frecuente comunmente. Si elije Guiar, se desplegará una lista con los lugares cargados por categoría, aquí seleccionará el lugar al cual desea llegar.Si elige Información, accederá a una pantalla con botones dispuesto de forma vertical, uno debajo del otro, donde podrá actualizar el recorrido de los colectivos entre otros.Si elige salir, saldrá de la aplicación.</string>
    <string name="error_when_retrieving_data">Surgió un problema cuando se intento conectar a internet</string>
    <string name="actualizar_lineas">Actualizar Recorridos</string>
    <string name="recup">Recuperar</string>
    <string name="obt_loc">Espere hasta obtener su localización</string>
    <string name="adv_tdl">Campo tipo de lugar no puede ser vacío</string>
    <string name="adv_cn">Campo nombre no puede ser vacío</string>
    <string name="exi_l">Ya existe un lugar cargado con ese nombre</string>
    <string name="loc_sat">Localización Exitosa</string>
    <string name="l_carg">Lugar Cargado Exitosamente</string>
    <string name="contact_carg">Contacto Cargado Exitosamente</string>
    <string name="contact_act">Contacto Actualizado Exitosamente</string>
    <string name="no_lugar">No Existen Lugares Cargados. Vuelva Atras</string>
    <string name="lugar">Lugar </string>
    <string name="elim_mens"> Eliminado Correctamente </string>
    <string name="calc_rec">Calculando Recorrido</string>
    <string name="lin_tom">Linea a Tomar </string>
    <string name="toc_timbre">Debería Tocar el Timbre para descender del Transporte </string>
    <string name="descender">Debería Tocar el Timbre para descender del Transporte </string>
    <string name="dest_prox">Se Encuentra Muy Próximo al destino deseado. Recorrido Finalizado. </string>
    <string name="metros"> Metros, o </string>
    <string name="kilom"> Kilometros, o </string>
    <string name="pasos"> Pasos </string>
    <string name="ubic">Usted se Encuentra en </string>
    <string name="uso">Uso de la Aplicación </string>
    <string name="config">Configuración </string>
    <string name="real_llamada">Realizar \n Llamada</string>
    <string name="llamada_emergencia">Llamada de Emergencia</string>
    <string name="admin_numero">Administrar Numero de Emergencia</string>
    <string name="llamada_lugar">Llamada a un Lugar Cargado</string>
    <string name="lugar_cargado">Lugar Cargado</string>
    <string name="buscar_direccion">Buscar por Dirección</string>
    <string name="volver">Para volver, presione el boton atrás del teléfono</string>
    <string name="necesita_permisos">Necesitas otorgar permisos para: </string>
    <string name="internet">Internet </string>
    <string name="escribir_en_memoria"> Escribir en memoria </string>
    <string name="acceso_localizacion"> Acceso a localización </string>
    <string name="save_data">Los datos fueron grabados correctamente</string>
    <string name="edit_datos">Datos editados correctamente</string>
    <string name="accion_cancelar">Acción Cancelada</string>
    <string name="gps_desactivado">GPS Desactivado</string>
    <string name="repito">Repito</string>
    <string name="no_intrucciones">No hay intrucciones</string>
    <string name="parada_colectivo">Se Encuentra Muy Próximo a la Parada de Colectivo.</string>
    <string name="destino">Se Encuentra Muy Próximo al Destino.</string>
    <string name="recorrido_fin">Recorrido Finalizado</string>
    <string name="leer_contactos">Leer Contactos</string>
    <string name="permiso_denegado">Algun permiso fue denegado</string>
    <string name="permiso_exitoso">Permisos exitosos</string>
    <string name="no_contactos"> No hay contacto guardado, dirijase a configuración para su carga</string>
    <string name="no_ubicado"> No se ha Podidio Encontrar, Compruebe la Busqueda y/o Conectividad</string>
    <string name="se_encuentra"> Usted se encuentra en </string>
    <string name="permission_rationale_location">Se requiere acceso al servicio de ubicación para demostrar la función "Mi ubicación", que muestra su ubicación actual en el mapa.</string>
    <string name="location_permission_denied">Esta muestra requiere permiso de ubicación para habilitar la capa "Mi ubicación". Vuelva a intentarlo y otorgue acceso para usar la ubicación. Si el permiso ha sido denegado permanentemente, se puede habilitar desde la Configuración del sistema de Aplicaciones y "Demostraciones API de Google Maps".</string>
    <string name="permission_required_toast">Se requiere permiso de ubicación para esta demostración.</string>







    <string name="direccion">Calle y Altura</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="title_activity_maps">Map</string>


</resources>
