<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="15dp" >

            <LinearLayout
                android:id="@+id/cuadroNombre"
                android:layout_height="100dp"
                android:layout_weight="3"
                android:background="@drawable/box_free_simple"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nombre_apellido"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_contact" />

                <EditText
                    android:id="@+id/textNomContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/color_black"
                    android:hint="@string/nombre_apellido_hint" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

        </TableRow>



        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="15dp" >

            <LinearLayout
                android:layout_height="100dp"
                android:layout_weight="3"
                android:background="@drawable/box_free_simple"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_tel_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_contact" />

                <EditText
                    android:id="@+id/textTelContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel_contact"
                    android:textColor="@color/color_black"
                    android:inputType="phone"
                    android:ems="10" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/aceptarButtom"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="0.99"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/cancelarButtom"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="0.99"
            android:text="@string/cancelar" />

    </LinearLayout>
</LinearLayout>